@@ -132,3 +132,9 @@ set inn_path "$inn_newslbin:$inn_newsbin:$env(PATH):/bin:/usr/bin"
 set env(PATH) "$inn_path"
 
 set inn_home "$inn_pathnews"
+
+
+##  Load another script that can override or add variables.
+if {[file executable "${inn_pathetc}/innshellvars.tcl.local"] == 1} {
+    source "${inn_pathetc}/innshellvars.tcl.local"
+}
